# shimpz-store

./: .dockerignore  .env.example  Dockerfile  README.md  ruff.toml  shimpz.app.toml
backend/: install.sh  pyproject.toml
backend/app/: assistant_releases.py  chat_ws_common.py  concurrency.py  config.py  db.py  events.py  logconf.py  main.py  middleware.py  models.py  payloads.py  register.py  upstream.py  ws.py
backend/app/chat/: __init__.py  events.py  relay.py
backend/app/routers/: app_lifecycle.py  apps.py  assistants.py  files.py  health.py  inference.py  oauth.py  public.py  teams.py
backend/tests/: chat_relay_fixture.py  conftest.py  test_assistant_release_feed.py  test_capsule_chat_boundary.py  test_chat_abort.py  test_chat_relay.py  test_chat_transport.py  test_cloud_assistants.py  test_image_contract.py  test_oauth_broker_routes.py  test_static_cache.py  test_team_chat_boundary.py
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/lib/: assistantInstallBridge.js  brainLogin.js  capsuleChat.js  catalog.ts  cloudAssistantLifecycle.js  i18n.ts  modelProviders.js  teamChat.js  url.ts  ws.ts
frontend/src/lib/components/: AccountMenu.svelte  AppCard.svelte  (+19 more)
frontend/src/routes/: +page.ts
frontend/static/: robots.txt
frontend/tests/: assistant-install-bridge.test.js  brain-login.test.js  capsule-chat.test.js  cloud-assistant-lifecycle.test.js  legal-pages.test.js  model-providers.test.js  run-tests.mjs  service-catalog.test.js  team-chat.test.js
shimpz/: SKILL.md
(+28 files in other folders)
