[project]
name = "shimpz-store-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.139.0",
    "python-multipart==0.0.32",
    "structlog==26.1.0",
    "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = ["httpx2==2.5.0", "pytest==9.1.1", "ruff==0.15.21"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
